# synly

./: Cargo.toml  README.md  build.rs  compose.yml  host.webm  join.webm  justfile
.codex/prompts/: tui_and_cli.md
assets/: host.webm  join.webm
native/: macos_audio.m
src/: app.rs  cli.rs  clipboard.rs  config.rs  crypto.rs  discovery.rs  main.rs  path_expand.rs  protocol.rs  startup_tui.rs  sync.rs
src/audio/: capture.rs  codec.rs  config.rs  error.rs  fec.rs  mod.rs  playback.rs  protocol.rs  receiver.rs  runtime.rs  sender.rs
src/audio/platform/: macos.rs  mod.rs  unsupported.rs  windows.rs
tapes/host/: host.tape  synly
tapes/join/: join.tape  synly
